tokio-postgres/tests/derive/fail/unknown_container_attr.rs
use tokio_postgres::FromRow;

#[derive(FromRow)]
#[postgres(foo = "bar")]
struct User {
    id: i64,
}

fn main() {}
