tokio-postgres/tests/derive/fail/unknown_container_attr.stderr
error: unknown override
 --> tests/derive/fail/unknown_container_attr.rs:4:12
  |
4 | #[postgres(foo = "bar")]
  |            ^^^
